# gcp-mlops-ref-arch

./: .gitignore  README.md  main.py  pyproject.toml
airflow/: gcp_commands.sh  requirements.txt
airflow/.astro/: config.yaml
airflow/dags/: training_data_pipeline.py
airflow/dags/tasks/: bigquery_pipeline_tasks.py  vertex_pipeline_tasks.py
cloud_function/inference_function/: deploy_inference_function.sh  main.py  requirements.txt
opentofu/: compute.tf  iam.tf  infra.tf  variables.tf
opentofu/project/: infra.tf
vertex-pipeline/: cc_fraud_detection_model_pipeline.json  cc_fraud_detection_model_pipeline.py  main.py  pyproject.toml  run_pipeline.py
vertex-pipeline/steps/: check_model_metrics_component.py  log_model_metrics_component.py  model_inference_endpoint_component.py  pipeline_steps.py
